--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 .navbar {
     text-align: center;
     margin-top: 3%;
-    font-family: "museo-sans;"
+    font-family: "museo-sans";
 }
 
 #logo {
