--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,48 @@
-.navbar {
-    text-align: center;
-    margin-top: 3%;
-    font-family: "museo-sans";
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+  color: #262626;
+}
+
+body 
+{
+ margin:0px;
+}
+
+#nav {
+ background-color:#f2f2f2;
+ width:100%;
+ height:200px;
+ position:fixed;
+ text-align: center;
+ font-family: "museo-sans";
+}
+
+#navigation
+{
+ list-style-type:none;
+ margin-top: 2%;
+ margin-left: -3%; 
+}
+li 
+{
+ display:inline;
+ padding:1.5%;
+}
+#nav a
+{
+ font-family: "museo-sans";
+ text-decoration:none;
+} 
+#nav a:hover 
+{
+ color:#f27c4f;
 }
 
 #logo {
+    margin-top: 3%;
     width: 4%; /* 60 / 960 */
     text-align: center;
 }
