--- a/css/main.css
+++ b/css/main.css
@@ -1,31 +1,35 @@
 a:link {
   text-decoration: none;
+  color: #262626;
 }
 a:visited {
   text-decoration: none;
   color: #262626;
 }
-
 body 
 {
  margin:0px;
 }
-
 #nav {
  background-color:#f2f2f2;
  width:100%;
- height:190px;
+ height:170px;
  position:fixed;
  text-align: center;
  font-family: "museo-sans";
+ font-size: 80%;
  letter-spacing: 0.15em;
 }
-
+#logo {
+    margin-top: 35px;
+    width: 45px; /* 60 / 960 */
+    text-align: center;
+}
 #navigation
 {
  list-style-type:none;
- margin-top: 2%;
- margin-left: -3%; 
+ margin-top: 25px;
+ margin-left: -30px; 
 }
 li 
 {
@@ -40,12 +44,6 @@ li
 #nav a:hover 
 {
  color:#f27c4f;
-}
-
-#logo {
-    margin-top: 3%;
-    width: 4%; /* 60 / 960 */
-    text-align: center;
 }
 
 
