--- a/css/main.css
+++ b/css/main.css
@@ -47,12 +47,16 @@ li
 }
 #home {
     float: left;
-    height: 720px;
+    height: 640px;
     width: 100%;
-    /* background-color: #84bba7;
-    background-color: #a4cec4; */
     background-color: #262626;
     z-index: 4;
+}
+#home_arrow {
+    margin-top: 120px;
+    margin-left: 48%;
+    width: 45px;
+    text-align: center;
 }
 p#headline_name {
     font-family: Georgia;
@@ -69,11 +73,6 @@ p#headline {
     margin-left: 35%;
     font-size: 160%;
     letter-spacing: .03em;
-}
-#home_arrow {
-    margin-top: 35px;
-    width: 45px; /* 60 / 960 */
-    text-align: center;
 }
 
 
