--- a/css/main.css
+++ b/css/main.css
@@ -13,16 +13,16 @@ body
 #nav {
     background-color:#f2f2f2;
     width:100%;
-    height:170px;
+    height:150px;
     position:fixed;
     text-align: center;
     font-family: "museo-sans";
-    font-size: 80%;
+    font-size: 75%;
     letter-spacing: 0.15em;
 }
 #logo {
-    margin-top: 35px;
-    width: 45px; /* 60 / 960 */
+    margin-top: 30px;
+    width: 40px; /* 60 / 960 */
     text-align: center;
 }
 #navigation
@@ -61,7 +61,7 @@ li
 p#headline_name {
     font-family: Georgia;
     color: #dadada;
-    margin-top: 340px;
+    margin-top: 325px;
     margin-left: 25%;
     font-size: 160%;
     letter-spacing: .03em;
@@ -70,9 +70,21 @@ p#headline {
     font-family: Georgia;
     color: #dadada;
     margin-top: -10px;
-    margin-left: 35%;
+    margin-left: 34%;
     font-size: 160%;
     letter-spacing: .03em;
+}
+#about {
+  float: left;
+  margin-top: 0px;
+  height: 550px;
+  width: 100%;
+  background-color: #ffffff;
+}
+#title_about {
+    margin-top: 150px;
+    margin-left: 50%;
+    width: 45px;
 }
 
 
