--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body
     margin:0px;
 }
 #nav {
-    background-color:#f2f2f2;
+    background-color:#ffffff;
     width:100%;
     height:150px;
     position:fixed;
@@ -62,16 +62,16 @@ p#headline_name {
     font-family: Georgia;
     color: #dadada;
     margin-top: 325px;
-    margin-left: 25%;
-    font-size: 160%;
+    margin-left: 28%;
+    font-size: 140%;
     letter-spacing: .03em;
 }
 p#headline {
     font-family: Georgia;
     color: #dadada;
     margin-top: -10px;
-    margin-left: 34%;
-    font-size: 160%;
+    margin-left: 37%;
+    font-size: 140%;
     letter-spacing: .03em;
 }
 #about {
@@ -101,9 +101,9 @@ p#headline {
     line-height: 155%;
 }
 #headshot {
-    margin-top: -325px;
-    margin-left: 25%;
-    width: 200px;
+    margin-top: -340px;
+    margin-left: 23%;
+    width: 300px;
 }
 
 
