--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body
     position:fixed;
     text-align: center;
     font-family: "museo-sans";
+    font-weight: 300;
     font-size: 75%;
     letter-spacing: 0.15em;
 }
@@ -53,7 +54,7 @@ li
     z-index: 4;
 }
 #home_arrow {
-    margin-top: 120px;
+    margin-top: 150px;
     margin-left: 48%;
     width: 45px;
     text-align: center;
@@ -61,7 +62,7 @@ li
 p#headline_name {
     font-family: Georgia;
     color: #dadada;
-    margin-top: 325px;
+    margin-top: 340px;
     margin-left: 28%;
     font-size: 140%;
     letter-spacing: .03em;
