--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 a:link {
     text-decoration: none;
-    color: #262626;
+    color: #23272a;
 }
 a:visited {
     text-decoration: none;
-     color: #262626;
+     color: #23272a;
 }
 a:hover 
 {
@@ -54,7 +54,7 @@ li
     float: left;
     height: 640px;
     width: 100%;
-    background-color: #262626;
+    background-color: #ffffff;
     z-index: 4;
 }
 #home_arrow {
@@ -65,7 +65,7 @@ li
 }
 p#headline_name {
     font-family: Georgia;
-    color: #dadada;
+    color: #23272a;
     margin-top: 340px;
     margin-left: 28%;
     font-size: 140%;
@@ -73,7 +73,7 @@ p#headline_name {
 }
 p#headline {
     font-family: Georgia;
-    color: #dadada;
+    color: #23272a;
     margin-top: -10px;
     margin-left: 37%;
     font-size: 140%;
@@ -96,7 +96,7 @@ p#headline {
     margin-left: 50%;
     width: 335px;
     font-family: Georgia;
-    color: #262626;
+    color: #23272a;
     line-height: 155%;
 }
 #about_copy2 {
@@ -104,7 +104,7 @@ p#headline {
     margin-left: 50%;
     width: 335px;
     font-family: Georgia;
-    color: #262626;
+    color: #23272a;
     line-height: 155%;
 }
 #headshot {
@@ -118,7 +118,7 @@ p#headline {
   margin-top: 0px;
   height: 550px;
   width: 100%;
-  background-color: #262626;
+  background-color: #23272a;
 }
 #title_work {
     margin-top: 145px;
@@ -162,7 +162,7 @@ p#headline {
     margin-left: 50%;
     width: 345px;
     font-family: Georgia;
-    color: #262626;
+    color: #23272a;
     line-height: 155%;
 }
 
