--- a/css/main.css
+++ b/css/main.css
@@ -168,15 +168,23 @@ p#headline {
     color: #23272a;
     line-height: 155%;
 }
+#email {
+    color: #f27c4f;
+}
 #twitter {
     margin-top: -15px;
     margin-left: 48.5%;
-    width: 75px;
+    width: 63px;
 }
 #linkedin {
-    margin-top: -85px;
-    margin-left: 55%;
-    width: 75px;
+    margin-top: -17px;
+    margin-left: 0px;
+    width: 52px;
+}
+#medium {
+    margin-top: -17px;
+    margin-left: 0px;
+    width: 52px;
 }
 
 
