--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body
     letter-spacing: 0.15em;
     border-bottom-style: solid;
     border-bottom-width: 1px;
-    border-bottom-color: #828e97;
+    border-bottom-color: #bac0c5;
 }
 #logo {
     margin-top: 30px;
@@ -65,6 +65,9 @@ li
     margin-left: 48%;
     width: 40px;
     text-align: center;
+}
+div.headline_text {
+    display:none;
 }
 p#headline_name {
     font-family: Georgia;
@@ -177,7 +180,7 @@ p#headline {
     width: 63px;
 }
 #linkedin {
-    margin-top: -12px;
+    margin-top: -13px;
     margin-left: -7px;
     width: 54px;
 }
