fix font weight

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body
     position:fixed;
     text-align: center;
     font-family: "museo-sans";
-    font-weight: bold;
+    font-weight: 500;
     font-size: 75%;
     letter-spacing: 0.15em;
     border-bottom-style: solid;
