--- a/css/main.css
+++ b/css/main.css
@@ -117,12 +117,18 @@ li
     width: 25%;
     min-width: 225px;
 }
+#container {
+    width: 100%;
+    height: 550px;
+    overflow: auto;
+    background-color: #23272a;
+}
 #work {
   float: left;
   margin-top: 0px;
   height: 550px;
-  width: 100%;
-  background-color: #23272a;
+  width: 50%;
+  padding: 0;
 }
 #title_work {
     margin-top: 145px;
@@ -136,6 +142,7 @@ li
     font-family: Georgia;
     color: #dadada;
     line-height: 155%;
+    z-index: 1;
 }
 #work_copy2 {
     margin-top: 20px;
@@ -149,21 +156,36 @@ li
     color: #f27c4f;
     /* color: #f69f7e; */
 }
+#experience {
+    margin-top: 0px;
+    width: 50%;
+    height: 550px;
+    float: right;
+    font-color: #ffffff;
+    padding: 0;
+    z-index: -1;
+    overflow: hidden;
+}
+#logo_neu {
+    width: 12%;
+    margin-top: 145px;
+
+}
 #contact {
   float: left;
   margin-top: 0px;
-  height: 460px;
+  height: 465px;
   width: 100%;
   background-color: #ffffff;
 }
 #title_contact {
     margin-top: 140px;
-    margin-left: 50%;
+    margin-left: 23%;
     width: 78px;
 }
 #contact_copy {
     margin-top: 25px;
-    margin-left: 50%;
+    margin-left: 23%;
     width: 345px;
     font-family: Georgia;
     color: #23272a;
@@ -174,7 +196,7 @@ li
 }
 #twitter {
     margin-top: -10px;
-    margin-left: 48.5%;
+    margin-left: 21.5%;
     width: 63px;
 }
 #linkedin {
@@ -188,7 +210,7 @@ li
     width: 32px;
 }
 #logo_footer {
-    margin-right: 5px;
+    margin-right: 7px;
     width: 10px;
 }
 #footer {
