--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ li
     width: 100%;
     height: 550px;
     overflow: auto;
-    background-color: #23272a;
+    background-color: #23272a; 
 }
 #work {
   float: left;
@@ -166,11 +166,63 @@ li
     z-index: -1;
     overflow: hidden;
 }
-#logo_neu {
-    width: 12%;
+#company_neu {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #f27c4f;
+    /* font-color: #23272a;
+    background-color: #dadada;
+    padding: 8px;
+    width: 172px; */
+    margin-top: 145px;
+}
+#position_neu {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #dadada;
+    margin-top: 5px;
+}
+#company_wistia {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #f27c4f;
+    margin-top: 15px;
+}
+#position_wistia {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #dadada;
+    margin-top: 5px;
+}
+#company_eclub {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #f27c4f;
+    margin-top: 15px;
+}
+#position_eclub {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #dadada;
+    margin-top: 5px;
+}
+#company_lh {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #f27c4f;
+    margin-top: 15px;
+}
+#position_lh {
+    font-family: "museo-sans";
+    font-size: 80%;
+    color: #dadada;
+    margin-top: 5px;
+}
+/* #logo_neu {
+    width: 15%;
     margin-top: 145px;
 
-}
+} */
 #contact {
   float: left;
   margin-top: 0px;
