--- a/css/main.css
+++ b/css/main.css
@@ -132,12 +132,12 @@ li
 }
 #title_work {
     margin-top: 145px;
-    margin-left: 23%;
+    margin-left: 47%;
     width: 55px;
 }
 #work_copy1 {
     margin-top: 30px;
-    margin-left: 23%;
+    margin-left: 47%;
     width: 335px;
     font-family: Georgia;
     color: #dadada;
@@ -146,7 +146,7 @@ li
 }
 #work_copy2 {
     margin-top: 20px;
-    margin-left: 23%;
+    margin-left: 47%;
     width: 335px;
     font-family: Georgia;
     color: #dadada;
@@ -165,6 +165,7 @@ li
     padding: 0;
     z-index: -1;
     overflow: hidden;
+    letter-spacing: 0.05em;
 }
 #company_neu {
     font-family: "museo-sans";
@@ -175,48 +176,56 @@ li
     padding: 8px;
     width: 172px; */
     margin-top: 145px;
+    margin-left: 15%;
 }
 #position_neu {
     font-family: "museo-sans";
     font-size: 80%;
     color: #dadada;
     margin-top: 5px;
+    margin-left: 15%;
 }
 #company_wistia {
     font-family: "museo-sans";
     font-size: 80%;
     color: #f27c4f;
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-left: 15%;
 }
 #position_wistia {
     font-family: "museo-sans";
     font-size: 80%;
     color: #dadada;
     margin-top: 5px;
+    margin-left: 15%;
 }
 #company_eclub {
     font-family: "museo-sans";
     font-size: 80%;
     color: #f27c4f;
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-left: 15%;
 }
 #position_eclub {
     font-family: "museo-sans";
     font-size: 80%;
     color: #dadada;
     margin-top: 5px;
+    margin-left: 15%;
 }
 #company_lh {
     font-family: "museo-sans";
     font-size: 80%;
     color: #f27c4f;
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-left: 15%;
 }
 #position_lh {
     font-family: "museo-sans";
     font-size: 80%;
     color: #dadada;
     margin-top: 5px;
+    margin-left: 15%;
 }
 /* #logo_neu {
     width: 15%;
