--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
 a:link {
     text-decoration: none;
-    color: #23272a;
+    color: #f27c4f;
 }
 a:visited {
     text-decoration: none;
-     color: #23272a;
+    /* color: #23272a; */
+    color: #f27c4f;
 }
 a:hover 
 {
@@ -189,7 +190,7 @@ li
     font-family: "museo-sans";
     font-size: 80%;
     color: #f27c4f;
-    margin-top: 37px;
+    margin-top: 38px;
     margin-left: 15%;
     letter-spacing: 0.05em;
 }
@@ -204,7 +205,7 @@ li
     font-family: "museo-sans";
     font-size: 80%;
     color: #f27c4f;
-    margin-top: 37px;
+    margin-top: 38px;
     margin-left: 15%;
     letter-spacing: 0.05em;
 }
@@ -219,7 +220,7 @@ li
     font-family: "museo-sans";
     font-size: 80%;
     color: #f27c4f;
-    margin-top: 37px;
+    margin-top: 38px;
     margin-left: 15%;
     letter-spacing: 0.05em;
 }
