--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ li
     float: left;
     height: 640px;
     width: 100%;
-    background-color: #ffffff;
+    background-color: #23272a;
     z-index: 4;
 }
 #home_arrow {
@@ -69,7 +69,7 @@ li
 #headline_name {
     font-family: "museo-sans";
     font-weight: 700;
-    color: #23272a;
+    color: #f7f7f7;
     margin-top: 300px;
     text-align: center;
     font-size: 324%;
@@ -77,7 +77,7 @@ li
 }
 #headline {
     font-family: Georgia;
-    color: #23272a;
+    color: #f7f7f7;
     margin-top: -45px;
     text-align: center;
     font-size: 140%;
@@ -138,7 +138,8 @@ li
 #work_copy1 {
     margin-top: 30px;
     margin-left: 47%;
-    width: 335px;
+    width: 50%;
+    min-width: 200px;
     font-family: Georgia;
     color: #dadada;
     line-height: 155%;
@@ -147,7 +148,8 @@ li
 #work_copy2 {
     margin-top: 20px;
     margin-left: 47%;
-    width: 335px;
+    width: 50%;
+    min-width: 200px;
     font-family: Georgia;
     color: #dadada;
     line-height: 155%; 
