font weight play

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ li
     color: #f7f7f7;
     margin-top: 300px;
     text-align: center;
-    font-size: 323%;
+    font-size: 321%;
     letter-spacing: .005em;
 }
 #headline {
@@ -171,6 +171,7 @@ li
 #company_neu {
     font-family: "museo-sans";
     font-size: 80%;
+    font-weight: 700;
     color: #f27c4f;
     /* font-color: #23272a;
     background-color: #dadada;
@@ -190,6 +191,7 @@ li
 #company_wistia {
     font-family: "museo-sans";
     font-size: 80%;
+    font-weight: 700;
     color: #f27c4f;
     margin-top: 38px;
     margin-left: 15%;
@@ -205,6 +207,7 @@ li
 #company_eclub {
     font-family: "museo-sans";
     font-size: 80%;
+    font-weight: 700;
     color: #f27c4f;
     margin-top: 38px;
     margin-left: 15%;
@@ -220,6 +223,7 @@ li
 #company_lh {
     font-family: "museo-sans";
     font-size: 80%;
+    font-weight: 700;
     color: #f27c4f;
     margin-top: 38px;
     margin-left: 15%;
