--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ li
 }
 #headline {
     font-family: "minion-pro", Georgia;
+    font-weight: 300;
     color: #f7f7f7;
     margin-top: -45px;
     text-align: center;
