--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,7 @@ li
     margin-top: 25px;
     margin-left: 50%;
     width: 335px;
-    font-family: Georgia;
+    font-family: "minion-pro," Georgia;
     color: #23272a;
     line-height: 155%;
 }
@@ -108,7 +108,7 @@ li
     margin-top: 15px;
     margin-left: 50%;
     width: 335px;
-    font-family: Georgia;
+    font-family: "minion-pro", Georgia;
     color: #23272a;
     line-height: 155%;
 }
@@ -141,7 +141,7 @@ li
     margin-left: 47%;
     width: 50%;
     min-width: 200px;
-    font-family: Georgia;
+    font-family: "minion-pro", Georgia;
     color: #dadada;
     line-height: 155%;
     z-index: 1;
@@ -151,7 +151,7 @@ li
     margin-left: 47%;
     width: 50%;
     min-width: 200px;
-    font-family: Georgia;
+    font-family: "minion-pro", Georgia;
     color: #dadada;
     line-height: 155%; 
 }
@@ -258,7 +258,7 @@ li
     margin-top: 25px;
     margin-left: 23%;
     width: 345px;
-    font-family: Georgia;
+    font-family: "minion-pro", Georgia;
     color: #23272a;
     line-height: 155%;
 }
