playin with fontz

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,8 @@ li
     margin-top: 25px;
     margin-left: 50%;
     width: 335px;
-    font-family: "minion-pro," Georgia;
+    font-family: "minion-pro", Georgia;
+    font-size: 130%;
     color: #23272a;
     line-height: 155%;
 }
