--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ body
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: #bac0c5;
+    z-index: 10;
 }
 #logo {
     margin-top: 30px;
@@ -58,7 +59,8 @@ li
     height: 640px;
     width: 100%;
     background-color: #23272a;
-    z-index: 4;
+    z-index: 8;
+    position: relative;
 }
 #home_arrow {
     margin-top: 150px;
@@ -86,13 +88,14 @@ li
 }
 #about {
     float: left;
-    margin-top: 0px;
-    height: 550px;
+    margin-top: -100px;
+    height: 680px;
     width: 100%;
     background-color: #ffffff;
+    z-index: 6;
 }
 #title_about {
-    margin-top: 140px;
+    margin-top: 250px;
     margin-left: 50%;
     width: 60px;
 }
@@ -126,13 +129,14 @@ li
 }
 #work {
   float: left;
-  margin-top: 0px;
-  height: 550px;
+  margin-top: -100px;
+  height: 680px;
   width: 50%;
   padding: 0;
+  z-index: 2;
 }
 #title_work {
-    margin-top: 145px;
+    margin-top: 255px;
     margin-left: 47%;
     width: 55px;
 }
@@ -160,7 +164,7 @@ li
     /* color: #f69f7e; */
 }
 #experience {
-    margin-top: 0px;
+    margin-top: 10px;
     width: 50%;
     height: 550px;
     float: right;
