--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,8 @@ li
 }
 #headshot {
     margin-top: -340px;
-    margin-left: 23%;
+    position: absolute;
+    z-index: 1;
     width: 25%;
     min-width: 225px;
     max-width: 300px;
@@ -149,6 +150,7 @@ li
     margin-left: 47%;
     width: 50%;
     min-width: 200px;
+    max-width: 335px;
     font-family: Georgia;
     color: #dadada;
     line-height: 155%;
