moar widescreen tweaks

--- a/css/main.css
+++ b/css/main.css
@@ -121,8 +121,7 @@ li
 }
 #headshot {
     margin-top: -340px;
-    position: absolute;
-    z-index: 1;
+    margin-left: 23%;
     width: 25%;
     min-width: 225px;
     max-width: 300px;
@@ -161,6 +160,7 @@ li
     margin-left: 47%;
     width: 50%;
     min-width: 200px;
+    max-width: 335px;
     font-family: Georgia;
     color: #dadada;
     line-height: 155%; 
