--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ li
 }
 #headshot {
     margin-top: -340px;
-    margin-left: 23%;
+    margin-right: 50%;
     width: 25%;
     min-width: 225px;
     max-width: 300px;
