--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,9 @@ li
     overflow: auto;
     background-color: #23272a; 
 }
+#left_work {
+    width: 50%;
+}
 #work {
   float: left;
   margin-top: -100px;
@@ -142,12 +145,14 @@ li
 }
 #title_work {
     margin-top: 255px;
-    margin-left: 47%;
     width: 55px;
+    float: right;
+    margin-right: 300px;
 }
 #work_copy1 {
     margin-top: 30px;
-    margin-left: 47%;
+    float: right;
+    margin-right: 33px;
     width: 50%;
     min-width: 200px;
     max-width: 335px;
@@ -158,7 +163,8 @@ li
 }
 #work_copy2 {
     margin-top: 20px;
-    margin-left: 47%;
+    margin-right: 33px;
+    float: right;
     width: 50%;
     min-width: 200px;
     max-width: 335px;
