fix form typeface

--- a/css/theme.css
+++ b/css/theme.css
@@ -90,7 +90,7 @@ html{
 
 .wufoo label.desc, .wufoo legend.desc{
 	font-size:20px;
-	font-family:inherit;
+	font-family: "brandon-grotesque";
 	font-style:normal;
 	font-weight:normal;
 	color:#ffffff;
