--- a/beer_style.css
+++ b/beer_style.css
@@ -15,7 +15,7 @@ p {
 }
 
 h2 {
-	font-size-adjust:0.531;
+	font-size: 28px;
 	font-weight: normal;
 }
 
@@ -131,10 +131,6 @@ h3 {
 	width: 675px;
 }
 
-#bold {
-	font-weight: bold;
-}
-
 #fifth {
 	background-color: #253F6F;
 	height: 650px;
@@ -151,7 +147,7 @@ h3 {
 
 #cup_container {
 	width: 725px;
-	margin: 80px auto 0 auto;
+	margin: 70px auto 0 auto;
 }
 
 #fifth_cup {
