--- a/beer_style.css
+++ b/beer_style.css
@@ -16,7 +16,8 @@ p {
 
 h2 {
 	font-size: 32px;
-	font-weight: normal;
+	font-weight: bold;
+	letter-spacing: 1px;
 }
 
 h3 {
@@ -132,12 +133,8 @@ h3 {
 }
 
 #fourth .text {
-	margin-top: 30px;
+	margin-top: 50px;
 	width: 675px;
-}
-
-#fourth h2 {
-	margin-bottom: 60px;
 }
 
 #fifth {
