--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+a {
+    text-decoration: none;
+    border-bottom: solid;
+    border-color: #1A1919;
+    border-width: 1.5px;
+}
+
+a:visited {
+    text-decoration: none;
+    color: #1A1919;
+}
+
 #splash {
     float: left;
     margin-top: -25px;
@@ -18,6 +30,7 @@ h1 {
     font-weight: 300;
     font-style: normal;
     font-size: 40px;
+    color: #1A1919;
 }
 
 .medium {
@@ -32,6 +45,7 @@ h2 {
     font-style: normal;
     font-size: 28px;
     line-height: 42px;
+    color: #1A1919;
 }
 
 p {
@@ -40,6 +54,7 @@ p {
     font-style: normal;
     font-size: 22px;
     line-height: 36px;
+    color: #1A1919;
 }
 
 .smallcaps {
@@ -97,6 +112,7 @@ p {
     float: left;
     margin-top: 100px;
     margin-left: 11%;
+    margin-bottom: 100px;
     width: 38%;
 }
 
