--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h1 {
     font-family: 'Whitney A', 'Whitney B';
     font-weight: 300;
     font-style: normal;
-    font-size: 40px;
+    font-size: 38px;
     color: #1A1919;
 }
 
@@ -76,13 +76,13 @@ p {
 
 #second {
     margin-top: 100px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     margin-left: 2px;
 }
 
 #third {
     margin-top: 100px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     margin-left: 2px;
 }
 
@@ -115,57 +115,6 @@ p {
     margin-bottom: 100px;
     width: 38%;
 }
-
-
-
-@font-face {
-    font-family: 'source_sans_prolight';
-    src: url('fonts/sourcesanspro-light-webfont.eot');
-    src: url('fonts/sourcesanspro-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/sourcesanspro-light-webfont.woff2') format('woff2'),
-         url('fonts/sourcesanspro-light-webfont.woff') format('woff'),
-         url('fonts/sourcesanspro-light-webfont.ttf') format('truetype'),
-         url('fonts/sourcesanspro-light-webfont.svg#source_sans_prolight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'source_sans_proregular';
-    src: url('fonts/sourcesanspro-regular-webfont.eot');
-    src: url('fonts/sourcesanspro-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
-         url('fonts/sourcesanspro-regular-webfont.woff') format('woff'),
-         url('fonts/sourcesanspro-regular-webfont.ttf') format('truetype'),
-         url('fonts/sourcesanspro-regular-webfont.svg#source_sans_proregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'source_sans_proextralight';
-    src: url('fonts/sourcesanspro-extralight-webfont.eot');
-    src: url('fonts/sourcesanspro-extralight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/sourcesanspro-extralight-webfont.woff2') format('woff2'),
-         url('fonts/sourcesanspro-extralight-webfont.woff') format('woff'),
-         url('fonts/sourcesanspro-extralight-webfont.ttf') format('truetype'),
-         url('fonts/sourcesanspro-extralight-webfont.svg#source_sans_proextralight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'source_sans_prosemibold';
-    src: url('fonts/sourcesanspro-semibold-webfont.eot');
-    src: url('fonts/sourcesanspro-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/sourcesanspro-semibold-webfont.woff2') format('woff2'),
-         url('fonts/sourcesanspro-semibold-webfont.woff') format('woff'),
-         url('fonts/sourcesanspro-semibold-webfont.ttf') format('truetype'),
-         url('fonts/sourcesanspro-semibold-webfont.svg#source_sans_prosemibold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 
 /* Other devices */
 
@@ -212,11 +161,13 @@ p {
 }
 
 .smallcaps {
-    font-size: 16px;
+    font-size: 14px;
+    line-height: 34px
 }
 
 #contact {
     margin-top: 125px;
+    line-height: 
 }
 
 }
