lighten underline style

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 a {
     text-decoration: none;
     border-bottom: solid;
-    border-color: #1A1919;
+    border-color: #A6A499;
     border-width: 1.5px;
 }
 
