--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 a {
     text-decoration: none;
+    padding-bottom: 1px;
     border-bottom: solid;
     border-color: #A6A499;
     border-width: 1.5px;
