--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ p {
 
 .smallcaps {
     font-size: 16px;
-    line-height: 44px;
+    line-height: 45px;
     letter-spacing: 1px;
 }
 
@@ -171,7 +171,7 @@ p {
 
 .smallcaps {
     font-size: 14px;
-    line-height: 34px
+    line-height: 35px
 }
 
 #experience {
@@ -187,6 +187,7 @@ p {
     margin-top: 115px;
     margin-left: 20px;
     margin-bottom: 80px;
+    padding-bottom: 80px;
 }
 
 }
