--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ p {
 }
 
 footer {
-    display: hidden;
+    margin-top: 315px;
 }
 
 h1 {
@@ -206,6 +206,11 @@ p {
     margin-left: 20px;
     margin-bottom: 80px;
     padding-bottom: 80px;
+}
+
+#copyright {
+    float: left;
+    margin-left: 11%;
 }
 
 }
