--- a/css/styles.css
+++ b/css/styles.css
@@ -214,3 +214,13 @@ p {
 }
 
 }
+
+/* Extra large displays */
+
+@media only screen and (min-width : 1440px) {
+
+.wrapper {
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+}
