--- a/css/main.css
+++ b/css/main.css
@@ -70,29 +70,29 @@ h2 {
 	font-family: Circular;
 	font-size: 20px;
 	line-height: 30px;
-	padding-bottom: 5px;
+	padding-bottom: px;
 	padding-top: 7px;
 }
 
 h3 {
 	color: #ffffff;
 	font-family: CircularMedium;
-	font-size: 36px;
+	font-size: 48px;
 	letter-spacing: .25px;
 	line-height: 115%;
 	text-align: center;
 	padding-top: 30px;
-	margin-bottom: 0px;
+	margin-top: 20px;
 }
 
 h4 {
 	font-family: CircularMedium;
-	font-size: 26px;
+	font-size: 28px;
 }
 
 h5 {
 	color: #9B9B9B;
-	font-size: 22px;
+	font-size: 24px;
 }
 
 h6 {
@@ -101,7 +101,7 @@ h6 {
 	font-size: 13px;
 	letter-spacing: 1px;
 	padding-top: 50px;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
 }
 
 h7 {
@@ -211,6 +211,8 @@ p {
 	font-family: Circular; 
 	font-size: 24px;
 	text-align: center;
+	margin-top: 5px;
+	margin-bottom: 20px;
 }
 
 #text_container {
@@ -221,7 +223,7 @@ p {
 #text_container p {
 	font-family: CenturySchoolbook;
 	font-size: 14px;
-	line-height: 24px;
+	line-height: 22px;
 }
 
 
