--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -130,10 +130,13 @@ body {
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0px;
   font-weight: 300; }
+h3 {
+margin-bottom: 0px;
+font-weight: 300; }
  h1 { font-size: 24px; line-height: 36px;  letter-spacing: .25px;} /*
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; } 
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
