--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,10 @@ ul a:active {
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
+	h3 {
+		font-size: 40px;
+	}
+
 	#nav_email {
 		display: none;
 	}
