--- a/css/main.css
+++ b/css/main.css
@@ -16,8 +16,29 @@
 }
 
 * {
-	color: #313131;
+	color: #4A4A4A;
 	-webkit-font-smoothing: antialiased;
+}
+
+a {
+  color: #313131;
+  -webkit-transition: color 0.2s;
+  -moz-transition:    color 0.2s;
+  -ms-transition:     color 0.2s;
+  -o-transition:      color 0.2s;
+  transition:         color 0.2s;
+}
+a:hover {
+  color: #6AC3FC; 
+}
+
+#about_hero {
+	margin: auto auto -3px auto;
+	max-width: 400px;
+}
+
+#about_text {
+	float: left;
 }
 
 .alignleft {
@@ -28,16 +49,31 @@
 	float: right;
 }
 
+.alignright a {
+	margin-left: 40px;
+}
+
 #audience_splash {
 	display: flex;
 	padding-top: 35px;
 	width: 100%;
 }
 
+#cta {
+	font-family: Circular;
+	font-size: 16px;
+	line-height: 20px;
+	left: 0;
+    position:absolute;
+    text-align:center;
+    top: 35%;
+    width: 100%;
+}
+
 footer {
 	width: 230px;
 	margin: auto;
-	padding-bottom: 100px;
+	padding-bottom: 140px;
 }
 
 footer img {
@@ -46,32 +82,28 @@ footer img {
 }
 
 .full_background {
-	width: 100%;
 	background-color: #F7F6F4;
 	background-size: cover;
+	display: inline-block;
+	height: auto;
+	width: 100%;
 	margin: 30px auto 30px auto;
 
 }
 
-h1, h2, h3, h4, h5, nav {
+h3, h4, h5, nav {
 	font-family: Circular;
 }
 
 h1 {
-	font-size: 24px;
-	letter-spacing: .25px;
-	text-align: center;
-	padding-top: 50px;
-	padding-bottom: 50px;
-	margin-bottom: 0px;
-}
-
-h2 {
 	font-family: Circular;
-	font-size: 20px;
-	line-height: 30px;
-	padding-bottom: px;
-	padding-top: 7px;
+	font-size: 36px;
+	font-weight: normal;
+	letter-spacing: .25px;
+	line-height: 45px;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	margin-bottom: 0px;
 }
 
 h3 {
@@ -120,6 +152,40 @@ h8 {
 	padding-top: 7px;
 }
 
+h9 {
+	color: #fff;
+	font-family: Circular;
+	font-size: 16px;
+	position: absolute;
+	top: 35px;
+	right: 7px;
+	-webkit-transform: rotate(-90deg);
+	-moz-transform: rotate(-90deg);
+	-ms-transform: rotate(-90deg);
+	-o-transform: rotate(-90deg);
+	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
+#hero_container {
+	background-color: #BBE4FF;
+	margin: 15px auto 30px auto;
+	position: relative;
+}
+
+#hero_text {
+	color: #55bbff;
+	font-family: Circular;
+	font-size: 28px;
+	line-height: 36px;
+	position: absolute;
+	right: 125px;
+	top: 170px;
+	width: 335px;
+}
+
+#hero_text_alt {
+	display: none;
+}
 
 .img_padding {
 	margin: 30px auto 30px auto;
@@ -131,7 +197,7 @@ li {
 	font-family: Circular;
 	font-size: 13px;
 	letter-spacing: 1px;
-	margin-right: 37px;
+	margin-right: 52px;
 
 }
 
@@ -145,12 +211,26 @@ nav a {
 	text-decoration: none;
 }
 
-#nav_email_icon {
-	display: none;
+nav a:hover {
+	border-width: 0 0 0px;
+	border-color: #BCE4FE;
+	border-style: solid;
+	box-shadow: inset 0 -4px 0 #BCE4FE;
+	color: inherit;
 }
 
-#other {
-	background-color: #FC8585;
+.nav_active {
+	border-width: 0 0 0px;
+	border-color: #BCE4FE;
+	border-style: solid;
+	box-shadow: inset 0 -4px 0 #BCE4FE;
+	color: inherit;
+}
+
+#nav_email_icon {
+	display: inline-block;
+	margin-top: 5px;
+	width: 20px;
 }
 
 p {
@@ -159,8 +239,8 @@ p {
 	line-height: 28px;
 }
 
-#rdio {
-	background-color: #47A4D2;
+#preview4 {
+	position: relative;
 }
 
 .readmore .separator {
@@ -170,15 +250,25 @@ p {
 
 .readmore img {
 	width: 150px;
-	padding-top: 20px;
+	padding-top: 5px;
 
 }
 
 .separator {
 	height: 2px;
 	background-color: #EDEDED;
-	margin-top: 60px;
+	margin-top: 70px;
 	margin-bottom: 60px;
+}
+
+.social {
+	padding-top: 20px;
+	float: left;
+}
+
+.social img {
+	float: left;
+	padding: 0px 32px 0px 0px;
 }
 
 .spacer {
@@ -187,7 +277,7 @@ p {
 
 .splash_rdio {
 	width: 100%;
-	background-color: #47A4D2;
+	background-color: #2593CE;
 	background-size: cover;
 	margin-top: 0px;
 	overflow: hidden;
@@ -195,7 +285,7 @@ p {
 
 .splash_wistia {
 	width: 100%;
-	background-color: #66C2FF;
+	background-color: #77C9FF;
 	background-size: cover;
 	margin-top: 0px;
 	overflow: hidden;
@@ -220,14 +310,9 @@ p {
 	margin-bottom: -30px;
 }
 
-#text_container p {
-	font-family: CenturySchoolbook;
-	font-size: 14px;
-	line-height: 22px;
-}
-
-
 .thumb {
+	margin-top: 15px;
+	position: relative;
 	opacity: 1;
     transition: opacity .25s ease-in-out;
     -moz-transition: opacity .25s ease-in-out;
@@ -236,6 +321,10 @@ p {
 
 .thumb:hover {
 	opacity: 0.6;
+}
+
+thumb_email {
+	background-color: #F4F4F4;
 }
 
 ul {
@@ -258,31 +347,35 @@ ul a:active {
 
 }
 
+.u-max-full-width {
+  max-width: 100%;
+  box-sizing: border-box; 
+}
+
 .wistia nav a {
 	color: #ffffff;
 	opacity: 1;
 }
 
 .wistia nav a:hover {
+	color: #fff;
 	opacity: 0.5;
+	border-width: 0 0 0px;
+	border-style: none;
+	box-shadow: inset 0 0 0;
 }
 
 
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
+	h1 {
+		font-size: 28px;
+		line-height: 38px;
+	}
+
 	h3 {
 		font-size: 40px;
-	}
-
-	#nav_email {
-		display: none;
-	}
-
-	#nav_email_icon {
-		display: inline-block;
-		margin-top: 3px;
-		width: 20px;
 	}
 
 	.readmore img {
@@ -295,6 +388,31 @@ ul a:active {
 		padding-top: 5px;
 	}
 
+}
+
+/* Small Devices */
+@media only screen and (max-width: 767px) {
+
+	#hero_container {
+		margin: 15px auto 75px auto;
+	}
+
+	#hero_text {
+		display: none;
+	}
+
+	#hero_text_alt {
+		display: inline-block;
+		font-family: Circular;
+		font-size: 22px;
+		line-height: 30px;
+		margin-bottom: 10px;
+		text-align: center;
+	}
+
+	.social {
+		display: none;
+	}
 }
 
 /* Larger than desktop */
