--- a/css/main.css
+++ b/css/main.css
@@ -365,13 +365,69 @@ ul a:active {
 	box-shadow: inset 0 0 0;
 }
 
+/* Animations 
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+ 
+.fade-in {
+	opacity:0;
+	-webkit-animation:fadeIn ease-in 1; 
+	-moz-animation:fadeIn ease-in 1;
+	animation:fadeIn ease-in 1;
+ 
+	-webkit-animation-fill-mode:forwards; 
+	-moz-animation-fill-mode:forwards;
+	animation-fill-mode:forwards;
+ 
+	-webkit-animation-duration:0.5s;
+	-moz-animation-duration:0.5s;
+	animation-duration:0.5s;
+}
+ 
+.fade-in.one {
+	-webkit-animation-delay: 0s;
+	-moz-animation-delay: 0s;
+	animation-delay: 0s;
+}
+ 
+.fade-in.two {
+	-webkit-animation-delay: 0.2s;
+	-moz-animation-delay:0.2s;
+	animation-delay: 0.2s;
+}
+ 
+.fade-in.three {
+	-webkit-animation-delay: 0.35s;
+	-moz-animation-delay: 0.35s;
+	animation-delay: 0.35s;
+}
+
+.fade-in.four {
+	-webkit-animation-delay: 0.5s;
+	-moz-animation-delay: 0.5s;
+	animation-delay: 0.5s;
+}
+ 
+/*---make a basic box ---*/
+.box{
+width: 200px;
+height: 200px;
+position: relative;
+margin: 10px;
+float: left;
+border: 1px solid #333;
+background: #999;
+}
+ 
+ 
 
 /* Extra Small Devices, Phones */ 
 @media only screen and (max-width : 480px) {
 
 	h1 {
-		font-size: 28px;
-		line-height: 38px;
+		font-size: 26px;
+		line-height: 36px;
 	}
 
 	h3 {
