--- a/css/animate.css
+++ b/css/animate.css
@@ -1064,6 +1064,31 @@ Copyright (c) 2014 Daniel Eden
           animation-name: fadeIn;
 }
 
+/* Add delayed effect to landing page */
+.fadeIn.one {
+  -webkit-animation-delay: 0.1s;
+  -moz-animation-delay: 0.1s;
+  animation-delay: 0.1s;
+}
+ 
+.fadeIn.two {
+  -webkit-animation-delay: 0.3s;
+  -moz-animation-delay:0.3s;
+  animation-delay: 0.3s;
+}
+ 
+.fadeIn.three {
+  -webkit-animation-delay: 0.5s;
+  -moz-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+
+.fadeIn.four {
+  -webkit-animation-delay: 0.65s;
+  -moz-animation-delay: 0.65s;
+  animation-delay: 0.65s;
+}
+
 @-webkit-keyframes fadeInDown {
   0% {
     opacity: 0;
@@ -1117,6 +1142,10 @@ Copyright (c) 2014 Daniel Eden
   -moz-animation-name: fadeInDown;
   -o-animation-name: fadeInDown;
   animation-name: fadeInDown;
+  -webkit-animation-duration: 0.8s;
+  -moz-animation-duration: fadeInDown;
+  -o-animation-duration: fadeInDown;
+  animation-duration: fadeInDown;
 }
 
 @-webkit-keyframes fadeInSecond {
