--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ a:hover {
 }
 
 #about_hero {
-	margin: auto auto -3px auto;
+	margin: auto auto -5px auto;
 	max-width: 400px;
 }
 
@@ -234,7 +234,7 @@ nav a:hover {
 }
 
 #other {
-	background-color: #FB8385;
+	background-color: #ee9a7f;
 }
 
 p {
@@ -369,50 +369,6 @@ ul a:active {
 	box-shadow: inset 0 0 0;
 }
 
-/* Animations 
-@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
-@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
- 
-.fade-in {
-	opacity:0;
-	-webkit-animation:fadeIn ease-in 1; 
-	-moz-animation:fadeIn ease-in 1;
-	animation:fadeIn ease-in 1;
- 
-	-webkit-animation-fill-mode:forwards; 
-	-moz-animation-fill-mode:forwards;
-	animation-fill-mode:forwards;
- 
-	-webkit-animation-duration:0.5s;
-	-moz-animation-duration:0.5s;
-	animation-duration:0.5s;
-}
- 
-.fade-in.one {
-	-webkit-animation-delay: 0s;
-	-moz-animation-delay: 0s;
-	animation-delay: 0s;
-}
- 
-.fade-in.two {
-	-webkit-animation-delay: 0.2s;
-	-moz-animation-delay:0.2s;
-	animation-delay: 0.2s;
-}
- 
-.fade-in.three {
-	-webkit-animation-delay: 0.35s;
-	-moz-animation-delay: 0.35s;
-	animation-delay: 0.35s;
-}
-
-.fade-in.four {
-	-webkit-animation-delay: 0.5s;
-	-moz-animation-delay: 0.5s;
-	animation-delay: 0.5s;
-}
- 
 /*---make a basic box ---*/
 .box{
 width: 200px;
@@ -430,7 +386,7 @@ background: #999;
 @media only screen and (max-width : 480px) {
 
 	#cta {
-		top: 25%;
+		top: 30%;
 	}
 
 	h1 {
